# RAG-system-for-acne-diagnose

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt  requirements.txt
docs/: END_TO_END_RELEASE_READINESS.md  puppeteer-config.json  sequence-diagrams.md
notebooks/: rag_eval_utils.py  rag_llm_judge.ipynb
scripts/: audit_answer_pipeline.py  audit_qdrant_corpus.py  build_entity_graph.py  build_entity_index.py  check_release_readiness.py  check_reproducible_environment.py  clear_redis_cache.py  eval_answer_quality_generalization_v2.py  eval_end_to_end_answer_quality_v13.py  eval_neo4j_schema_hardening.py  eval_phase1_data_foundation_v14.py  eval_phase1_readiness.py  eval_phase2_all.py  eval_phase2_answer_quality.py  eval_phase2_context_packing.py  eval_phase2_reranking.py  eval_phase2_retrieval.py  eval_runtime_resilience.py  eval_safe_fallback_flow.py  eval_semantic_reranker.py  eval_severity_aware_guard.py  eval_taxonomy_expansion.py  generate_phase2_debug_report.py  ingest_knowledge.py  init_chat_schema.py  init_schema.py  inspect_cache_versions.py  inspect_ingestion_manifest.py  inspect_phase2_readiness.py  inspect_taxonomy_candidates.py  plan_entity_index_update.py  plan_taxonomy_graph_update.py  pre_ui_runtime_check.py  rebuild_phase1_entity_layer.py  smoke_phase2_runtime.py  start_local_dev.ps1  validate_kb_collections.py  validate_neo4j_schema.py  validate_phase1_complete.py  validate_taxonomy.py
tests/: __init__.py  conftest.py  test_answer_formatting_contract.py  test_answer_generation_policy.py  test_answer_quality_generalization_v2.py  test_answer_quality_verifier.py  test_api_health.py  test_api_preflight.py  test_cache_versioning.py  test_candidate_merge.py  test_chunk_metadata_boost.py  test_context_packer.py  test_debug_report_generation.py  test_diagnostic_script_safety.py  test_domain_metadata.py  test_entity_card_generation.py  test_entity_cards.py  test_entity_graph_schema.py  (+60 more)
(+182 files in other folders)
